hvantran/project-management#96 Add json value validator